# MedClaw

./: .gitignore  README.md  pyproject.toml
docs/: medclaw-architecture-optimization.md  medclaw-redesign.md
medclaw/: __init__.py  __main__.py
medclaw/agent/: __init__.py  context.py  loop.py  memory.py  processor.py  skills.py
medclaw/agent/tools/medical/: __init__.py  tools.py
medclaw/application/: __init__.py  query_models.py  responses.py  use_cases.py
medclaw/config/: __init__.py  loader.py  schema.py
medclaw/domain/: __init__.py
medclaw/domain/medical/: __init__.py  services.py
medclaw/evidence/: __init__.py  api_models.py  artifacts.py  models.py  store.py
medclaw/gateways/: __init__.py  cache.py  medical.py
medclaw/interfaces/: __init__.py
medclaw/interfaces/cli/: __init__.py  app.py  common.py  research.py  root.py  system.py
medclaw/orchestrator/: __init__.py  collection_service.py  job_runner.py  report_persistence.py  router.py  run_coordinator.py  workflow_registry.py
medclaw/policy/: __init__.py  medical_safety.py
medclaw/providers/: __init__.py  base.py  deepseek.py  openrouter.py
medclaw/reporting/: briefs.py
medclaw/skills/clinical-trial-search/: SKILL.md
medclaw/skills/drug-lookup/: SKILL.md
medclaw/skills/paper-summarize/: SKILL.md
medclaw/skills/reference-formatter/: SKILL.md
medclaw/skills/statistical-test/: SKILL.md
medclaw/skills/study-design/: SKILL.md
medclaw/utils/: __init__.py  logging.py
medclaw/workflows/: __init__.py  base.py  clinical_trial_landscape.py  drug_target_landscape.py  evidence_brief.py  literature_review.py  study_design.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/unit/: test_api_models.py  test_application_responses.py  test_artifacts.py  test_config.py  test_context.py  test_evidence_store.py  test_medical_facades.py  test_reporting.py  test_research_router.py  test_research_use_cases.py  test_skills.py
