[project]
name = "medclaw"
version = "0.1.0"
description = "AI-powered medical research assistant for medical students, clinicians, and researchers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MedClaw Team", email = "team@medclaw.ai"}
]
keywords = ["ai", "medical", "research", "assistant", "llm", "healthcare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "tenacity>=8.0.0",
    "tiktoken>=0.5.0",
    "orjson>=3.9.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tyro>=0.7.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0"]
slack = ["slack-sdk>=3.20.0"]
discord = ["discord.py>=2.3.0"]
feishu = ["lark-parser>=0.12.0", "websocket-client>=1.6.0"]
dingtalk = ["dingtalk-chatbot>=1.3.0"]
email = ["aioimaplib>=1.8.0", "aiosmtplib>=3.0.0"]
matrix = ["matrix-client>=0.4.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "detect-secrets>=1.4.0",
]
all = [
    "medclaw[telegram,slack,discord,feishu,dingtalk,email,matrix,dev]",
]

[project.scripts]
medclaw = "medclaw.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["medclaw*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
